--- a/apoio.html
+++ b/apoio.html
@@ -22,15 +22,15 @@
     <strong>M-Pesa:</strong> 843790112
   </li>
   <li>
-    <img src="" alt="E-Mola" />
+    <img src="./docs/emola.png" alt="E-Mola" />
     <strong>E-Mola:</strong> 863727760
   </li>
   <li>
-    <img src="https://i.imgur.com/Z2XljpK.png" alt="M-Kesh" />
+    <img src="./docs/mkesh.png" alt="M-Kesh" />
     <strong>M-Kesh:</strong> 833072296
   </li>
   <li>
-    <img src="https://commons.wikimedia.org/wiki/File:Millennium_bim_Logotipo.png" alt="BIM" />
+    <img src="./docs/bim.png" alt="BIM" />
     <strong>BIM:</strong> 87878787
   </li>
 </ul>
