--- a/apoio.html
+++ b/apoio.html
@@ -22,15 +22,15 @@
     <strong>M-Pesa:</strong> 843790112
   </li>
   <li>
-    <img src="./docs/emola.png" alt="E-Mola" />
+    <img src="./emola.png" alt="E-Mola" />
     <strong>E-Mola:</strong> 863727760
   </li>
   <li>
-    <img src="./docs/mkesh.png" alt="M-Kesh" />
+    <img src="./mkesh.png" alt="M-Kesh" />
     <strong>M-Kesh:</strong> 833072296
   </li>
   <li>
-    <img src="./docs/bim.png" alt="BIM" />
+    <img src="./bim.png" alt="BIM" />
     <strong>BIM:</strong> 87878787
   </li>
 </ul>
