--- a/apoio.html
+++ b/apoio.html
@@ -19,26 +19,26 @@
     <ul class="carteiras">
   <li>
     <img src="https://img.icons8.com/?size=100&id=kUwZnzomzbTj&format=png&color=000000" alt="M-Pesa" />
-    <strong>M-Pesa:</strong> 843790112
+    <strong>M-Pesa: </strong> 843790112
   </li>
   <li>
-    <img src="emola.jpg" alt="E-Mola" />
-    <strong>E-Mola:</strong> 863727760
+    <img src="emola.jpg" " />
+    <strong>E-Mola: </strong> 863727760
   </li>
   <li>
     <img src="mkesh.jpg" alt="M-Kesh" />
-    <strong>M-Kesh:</strong> 833072296
+    <strong>M-Kesh: </strong> 833072296
   </li>
   <li>
     <img src="bim.png" alt="BIM" />
-    <strong>BIM:</strong> 87878787
+    <strong>BIM: </strong> 1161815561
   </li>
 </ul>
 
     <h3>Benefícios para quem apoiar:</h3>
     <ul style="text-align: left; max-width: 600px; margin: 0 auto; font-size: 16px;">
       <li><strong>Organizadores:</strong> acesso antecipado à plataforma, descontos em serviços e prioridade no suporte.</li><br>
-      <li><strong>Fornecedores e prestadores:</strong> destaque gratuito por 45 dias, acesso prioritário aos eventos e ganhará o titulo de apoiador no perfil o que lhe tornará especial.</li>
+      <li><strong>Fornecedores e prestadores:</strong> destaque gratuito por 45 dias, acesso prioritário aos eventos e ganhará o titulo de apoiador no perfil o que lhe tornará especial, claro dependendo da quantidade do apoio.</li>
     </ul>
   </section>
 
